# OpenPraparat

./: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  default.nix  gnustyle_setup.sh
.github/workflows/: main.yml
autom4te.cache/: output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.3  traces.5
src/: Makefile  Makefile.am  Makefile.in  imgui.ini  shell.nix
src/.deps/: imgui.Po  imgui_draw.Po  imgui_impl_glfw.Po  imgui_widgets.Po  praparat_gui-ImGuiFileDialog.Po  praparat_gui-gui.Po  praparat_gui-imgui.Po  praparat_gui-imgui_demo.Po  praparat_gui-imgui_draw.Po  praparat_gui-imgui_impl_glfw.Po  praparat_gui-imgui_impl_opengl2.Po  praparat_gui-imgui_tables.Po  praparat_gui-imgui_widgets.Po
