bin_PROGRAMS=praparat_builder praparat_gui praparat_deb praparat_cui
IMGUI_DIR = ./imgui
praparat_builder_SOURCES=builder.cpp $(IMGUI_DIR)/imgui.cpp $(IMGUI_DIR)/imgui_demo.cpp $(IMGUI_DIR)/imgui_draw.cpp $(IMGUI_DIR)/imgui_tables.cpp $(IMGUI_DIR)/imgui_widgets.cpp $(IMGUI_DIR)/backends/imgui_impl_glfw.cpp $(IMGUI_DIR)/backends/imgui_impl_opengl2.cpp lib/ImGuiFileDialog/ImGuiFileDialog.cpp
# praparat_gui_SOURCES=
# praparat_deb_SOURCES=
# praparat_cui_SOURCES=
